TFP-5184 Litt rydding og navngiving + tar inn om annen part har rett i eøs (#2059)